--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,30 @@ body {
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+  background: #181818;
 }
 
 .file-entry {
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 8px;
-  padding: 10px;
-  margin-bottom: 1rem;
+  padding: 15px;
+  margin: 5px 0px 5px 0px;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+  color: white;
+  background-color: #202020;
+}
+
+.add-data-button {
+  padding: 5px;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  background-color: #f55;
+  color: #fff;
+  width: 30px;
+  aspect-ratio: 1 / 1;
+}
+.add-data-button:hover {
+  background-color: #e44;
+  cursor: pointer;
 }
