--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@ body {
     -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
     sans-serif;
   margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
   background: #181818;
 }
 
@@ -114,4 +112,32 @@ body {
   border-radius: 8px;
   margin: auto;
   margin-top: 20px;
-} 
+}
+
+.outer-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-sidebar {
+  display: flex;
+  height: 100%;
+  margin-left: 0;
+  margin-top: 0;
+  flex-direction: column;
+}
+
+.sidebar-button {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border: 1px solid #303030;
+}
+
+.content-wrapper {
+  width: 50%;
+  /* max-width: 38rem; */
+  margin: auto;
+  margin-top: 20px;
+}
