--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,30 @@
+html {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
+
 body {
   font-family:
     -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
     sans-serif;
   margin: auto;
   background: #181818;
+
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* Internet Explorer/Edge */
+  user-select: none;         /* Standard syntax */
+
+  overflow-y: hidden;
 }
 
 h4 {
+  margin: 0;
   color: white;
 }
 
@@ -16,13 +34,12 @@ h4 {
   justify-content: space-between;
   align-items: flex-start;
   
-  border: none;
   border-radius: 8px;
   padding: 15px;
   margin: 5px 0px 5px 0px;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
   color: white;
-  background-color: #202020;
+  background-color: #282828;
 }
 
 .details-list {
@@ -121,13 +138,17 @@ h4 {
 .outer-wrapper {
   display: flex;
   flex-direction: row;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
 }
 
 .nav-sidebar {
   display: flex;
-  height: 100%;
   margin-left: 0;
-  margin-top: 0;
+  margin-top: 5px;
+  height: auto;
+  padding: 0;
   flex-direction: column;
 }
 
@@ -136,22 +157,49 @@ h4 {
   border-radius: 5px;
   width: 35px;
   height: 35px;
-  margin: 5px 0 0 0;
+  margin: 2px 0 0 0;
+
+  color: white;
 
   background-color: #181818;
   /* border: 1px solid #303030; */
 }
 
 .sidebar-button:hover {
+  background-color: #282828;
+}
+
+.sidebar-button .button-icon {
+  cursor: default;
+  margin: auto;
+  font-size: 1rem;
+}
+
+.content-wrapper {
+  width: 100%;
+  height: 97.5%;
+  margin-left: 5px;
+  margin-top: 1%;
+
+  padding-left: 15px;
+  padding-top: 8px;
+
+  border-radius: 8px 0 0 0;
+  /* max-width: 38rem; */
+  /* margin: auto; */
   background-color: #202020;
 }
 
-
-
-.content-wrapper {
-  width: 75%;
-  /* max-width: 38rem; */
-  margin: auto;
-  margin-top: 20px;
+#left-summary-panel, #right-detail-panel {
+  display: inline-block;
+  vertical-align: top;
+  height: 100%;
 }
 
+#left-summary-panel {
+  width: 40%;
+}
+
+#right-detail-panel {
+  width: 60%;
+}
