--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,9 @@ h4 {
   align-items: flex-start;
   
   border-radius: 8px;
-  padding: 15px;
+  padding: 5px 10px;
   margin: 5px 0px 5px 0px;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1); */
   color: white;
   background-color: #282828;
 }
@@ -179,7 +179,7 @@ h4 {
   width: 100%;
   height: 97.5%;
   margin-left: 5px;
-  margin-top: 1%;
+  margin-top: 5px;
 
   padding-left: 15px;
   padding-top: 8px;
