--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ h4 {
   margin: 5px 0px 5px 0px;
   /* box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1); */
   color: white;
-  background-color: #282828;
+  /* background-color: #282828; */
 }
 
 .details-list {
@@ -155,25 +155,22 @@ h4 {
 .sidebar-button {
   display: flex;
   border-radius: 5px;
-  width: 35px;
-  height: 35px;
+  /* width: 35px; */
+  /* height: 35px; */
   margin: 2px 0 0 0;
 
   color: white;
 
-  background-color: #181818;
   /* border: 1px solid #303030; */
 }
 
-.sidebar-button:hover {
-  background-color: #282828;
-}
 
-.sidebar-button .button-icon {
+
+/* .sidebar-button .button-icon {
   cursor: default;
   margin: auto;
   font-size: 1rem;
-}
+} */
 
 .content-wrapper {
   width: 100%;
@@ -197,9 +194,10 @@ h4 {
 }
 
 #left-summary-panel {
-  width: 40%;
+  width: 35%;
+  overflow-y: auto;
 }
 
 #right-detail-panel {
-  width: 60%;
+  width: 65%;
 }
