--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,13 @@ body {
   -ms-user-select: none;     /* Internet Explorer/Edge */
   user-select: none;         /* Standard syntax */
 
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 h4 {
   margin: 0;
   color: white;
+  font-size: 1.1rem;
 }
 
 .file-entry {
@@ -40,6 +41,19 @@ h4 {
   /* box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1); */
   color: white;
   /* background-color: #282828; */
+
+  overflow-x: hidden;
+  white-space: normal;
+}
+
+.file-entry .left-panel {
+  /* min-width: 150px; */
+  width: calc(100% - 148px);
+}
+
+.file-entry img {
+  max-width: 148px;
+  max-height: 148px;
 }
 
 .details-list {
@@ -91,17 +105,18 @@ h4 {
 
 .plus-btn {
   margin: auto;
-  margin-top: 20px;
+  margin-right: 0;
+  /* margin-top: 20px; */
   position: relative;
-  width: 30px;
-  height: 30px;
-  background-color: #e44;
-  border-radius: 50%;
+  width: 65px;
+  height: 35px;
+  /* background-color: #FF353C; */
+  border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.2s;
+  /* transition: background-color 0.2s; */
 }
 .plus-btn:hover {
-  background-color: #f66;
+  background-color: #FF4a51;
 }
 
 .plus-btn::before,
@@ -115,13 +130,13 @@ h4 {
 }
 
 .plus-btn::before {
-  width: 50%;
+  width: 0.7rem;
   height: 2px;
 }
 
 .plus-btn::after {
   width: 2px;
-  height: 50%;
+  height: 0.7rem;
 }
 
 .no-files-msg {
@@ -164,7 +179,39 @@ h4 {
   /* border: 1px solid #303030; */
 }
 
+.ip-selector {
+  display: inline-block;
+  border-radius: 5px;
+}
 
+.ip-selector:hover {
+  background-color: #303030;
+}
+
+.ip-selector h4, .ip-selector select {
+  display: inline-block;
+
+  padding: 10px 0 10px 0;
+  margin: auto;
+  appearance: none;
+  text-align: center;
+  font-size: 16px;
+  /* border: 1px solid #ccc; */
+  border: none;
+  outline: none;
+  background-color: #00000000;
+  color: white;
+  width: 148px;
+}
+
+.ip-selector select option {
+  background-color: #282828;
+  border-radius: 4px;
+}
+
+.ip-selector option:hover {
+  background-color: #303030;
+}
 
 /* .sidebar-button .button-icon {
   cursor: default;
@@ -172,32 +219,92 @@ h4 {
   font-size: 1rem;
 } */
 
-.content-wrapper {
+.button-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;;
   width: 100%;
-  height: 97.5%;
+  padding: 0;
+  margin: 0;
+
+}
+
+.outboxItemCloseBttn {
+  cursor: pointer;
+  color: white;
+  font-size: 0.8rem;
+  /* line-height: 100%; */
+  margin: auto;
+  /* margin-left: 0; */
+  margin-right: 0;
+  height: 100%;
+  /* margin-left: 10px; */
+}
+
+/* .outboxItemCloseBttn::after {
+  content: "✖";
+  opacity: 0;
+}
+
+.outboxItemCloseBttn:hover::after {
+  opacity: 1;
+} */
+
+.content-wrapper {
+  width: calc(100% - 5px);
+  height: calc(100% - 5px);
   margin-left: 5px;
   margin-top: 5px;
 
-  padding-left: 15px;
-  padding-top: 8px;
+  /* padding-left: 15px;
+  padding-top: 8px; */
 
   border-radius: 8px 0 0 0;
   /* max-width: 38rem; */
   /* margin: auto; */
   background-color: #202020;
+
+  white-space: nowrap;
+  overflow-y: hidden;
 }
 
 #left-summary-panel, #right-detail-panel {
   display: inline-block;
   vertical-align: top;
-  height: 100%;
+  margin-top: 8px;
 }
 
 #left-summary-panel {
-  width: 35%;
+  width: calc(30% - 24px);
+  /* min-width: 220px; */
   overflow-y: auto;
+  /* padding-right: 15px; */
+  height: 100%;
+  margin-left: 12px;
+  margin-right: 12px;
+
+  white-space: normal;
 }
 
 #right-detail-panel {
-  width: 65%;
+  background-color: #282828;
+  border-radius: 5px;
+  margin-right: 10px;
+  width: calc(70% - 15px);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: calc(100% - 20px);
+}
+
+.right-panel-flexrow {
+  display: flex;
+  flex-direction: row;
+  float: right;
+  margin-right: 10px;
+}
+
+.send-title-ribbon {
+  display: flex;
+  justify-items: space-between;
+  margin-bottom: 10px;
 }
