--- a/src/index.css
+++ b/src/index.css
@@ -222,11 +222,10 @@ h4 {
 .button-icon {
   display: flex;
   align-items: center;
-  justify-content: center;;
+  justify-content: center;
   width: 100%;
   padding: 0;
   margin: 0;
-
 }
 
 .outboxItemCloseBttn {
