--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 html {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  height: 100vh;
+  height: 100%;
+  height: 100%;
 }
 
 body {
@@ -10,11 +10,11 @@ body {
     -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
     sans-serif;
   margin: auto;
-  background: #181818;
+  background: #202020;
 
   color: white;
 
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
 
@@ -24,10 +24,6 @@ body {
   user-select: none;         /* Standard syntax */
 
   /* overflow-y: hidden; */
-}
-
-#root {
-  height: calc(100vh - 30px);
 }
 
 h4 {
@@ -170,22 +166,12 @@ h4 {
 .nav-sidebar {
   display: flex;
   margin-left: 0;
-  margin-top: 15px;
+  margin-top: 0;
+  margin-right: 5px;
   height: auto;
   padding: 0;
   flex-direction: column;
-}
-
-.sidebar-button {
-  display: flex;
-  border-radius: 5px;
-  /* width: 35px; */
-  /* height: 35px; */
-  margin: 2px 0 0 0;
-
-  color: white;
-
-  /* border: 1px solid #303030; */
+  width: 35px;
 }
 
 .ip-selector {
@@ -269,10 +255,10 @@ h4 {
   /* padding-left: 15px;
   padding-top: 8px; */
 
-  border-radius: 8px 0 0 0;
+  border-radius: 6px 0 0 0;
   /* max-width: 38rem; */
   /* margin: auto; */
-  background-color: #202020;
+  background-color: #282828;
 
   white-space: nowrap;
   overflow-y: hidden;
@@ -299,7 +285,7 @@ h4 {
 }
 
 #right-detail-panel, #right-blank-panel {
-  background-color: #282828;
+  background-color: #303030;
   border-radius: 10px;
   margin-right: 10px;
   width: calc(100% - 260px - 10px);
@@ -314,7 +300,7 @@ h4 {
   justify-content: center;
   /* align-items: space-around; */
   /* border: 3px dashed #404040; */
-  background-color: #1a1a1a;
+  background-color: #202020;
   /* width: calc(50% - 60px); */
   /* height: calc(30% - 6px); */
   /* min-height: 200px;
