--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,13 @@ html {
   padding: 0;
   height: 100%;
   height: 100%;
+
+  /* box-sizing: border-box; */
 }
+
+/* *, *:before, *:after {
+  box-sizing: inherit;
+} */
 
 body {
   font-family:
